# ziggypydust

./: .gitignore  build.py  build.zig  build.zig.zon  dict.py  loopcosting.py  notebook.py  notebook2.py  pyproject.toml  small_run.py
src/: aggr_ffi.zig  aggr_logic.zig  fib.zig  logic.zig  main.zig  time.zig
src/aggr/: costing.zig  partner_data.zig  proforma.zig  recompute.zig
test/: notebook.py  notebook2.py  notebook_list.py  recompute.py  test_aggr.py  test_fib.py  test_lock_bill_schedule_date.py  test_recompute_so.py  test_update_proforma_schedule_date.py
